cleanup, rewrite range selector to stimulus

--- a/app/views/tracks/_show_track.html+mobile.haml
+++ b/app/views/tracks/_show_track.html+mobile.haml
@@ -11,14 +11,10 @@
 
     %hr
 
-    #slider-range-selector
-      %input#range-selector{type: "text",
-                            name: 'range', 
-                            data: {remote: 'true', url: url_for},
-                            value: "#{@track_presenter.range_from};#{@track_presenter.range_to}"}
+    #slider-range-selector= render 'range_selector', presenter: @track_presenter
 
     = render 'tracks/charts', presenter: @track_presenter
-    
+
   .track-footer
     %blockquote
-      = render 'track_metadata' 
+      = render 'track_metadata'
