rewrite tournament match map to stimulus

--- a/app/views/tournaments/matches/maps/_round_map.html.haml
+++ b/app/views/tournaments/matches/maps/_round_map.html.haml
@@ -1,24 +1,18 @@
 .container-fluid
-  .col-sm-12
-    #match-map
-      #track-map-loading.text-muted
-        .fa-2x
-          %i.fa.fa-fw.fa-spin.fa-circle-o-notch
-          Loading Google Maps API
-        #track-map-loading-data.fa-2x
-          %i.fa.fa-fw.fa-check
-          Loading track data
+  .tournaments-match-map{'data-controller': 'tournaments--match-map',
+               'data-url': url_for,
+               'data-action': 'maps_api:ready@window->tournaments--match-map#on_maps_api_ready maps_api:failed@window->tournaments--match-map#on_maps_load_failed'}
+    #track-map-loading.text-muted{'data-target': 'tournaments--match-map.placeholder'}
+      .fa-2x
+        %i.fa.fa-fw.fa-spin.fa-circle-o-notch{'data-target': 'tournaments--match-map.maps_loading_status'}
+        Loading Google Maps API
+      .fa-2x
+        %i.fa.fa-fw.fa-spin.fa-circle-o-notch{'data-target': 'tournaments--match-map.data_loading_status'}
+        Loading track data
+    #match-map{'data-target': 'tournaments--match-map.map'}
 
   .center-block.text-center.top-buffer
     - @match_map.competitors.each do |competitor|
       %span
         %i.fa.fa-fw.fa-circle{style: "color: #{competitor.color}"}
         %span= competitor.name
-
-- content_for :page_js do
-  :javascript
-    var model = new Skyderby.models.TournamentMatchMap()
-    model.set(#{@match_map.to_json.html_safe});
-
-    var view = new Skyderby.views.TournamentMatchMap({model: model, el: '#match-map'});
-    view.render();
