--- a/app/views/layouts/application.html+mobile.haml
+++ b/app/views/layouts/application.html+mobile.haml
@@ -1,34 +1,12 @@
 !!! 5
 %html
   %head
-    %title= page_title(yield(:title))
+    = render 'layouts/head'
 
-    = action_cable_meta_tag
-
-    = stylesheet_pack_tag 'vendor'
     = stylesheet_link_tag 'mobile/application', media: 'all', 'data-turbolinks-track' => true
-
-    = javascript_pack_tag 'manifest'
-    = javascript_pack_tag 'vendor'
-
-    :javascript
-      var I18n = I18n || {};
-      I18n.defaultLocale = "#{I18n.default_locale}"
-      I18n.locale = "#{I18n.locale}"
-      MAPS_API_KEY = "#{ENV['MAPS_API_KEY']}"
-
-    = javascript_include_tag 'translations/application', 'data-turbolinks-track' => true
-
-    = javascript_pack_tag 'application'
-
-    = csrf_meta_tags
-
-    = render 'layouts/open_graph'
 
     %meta{name: "viewport", content: "width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"}
 
-    = render 'layouts/favicon'
-    = render 'layouts/google_analytics'
   %body
 
     = render 'layouts/header'
