--- a/app/views/events/scoreboards/_speed_distance_time.html.haml
+++ b/app/views/events/scoreboards/_speed_distance_time.html.haml
@@ -73,6 +73,9 @@
                     - if result.penalized?
                       %span.dotted-underline{'data-toggle': 'tooltip', title: result.penalty_reason}
                         = result.formated_points
+
+                        - if result.apply_penalty_to_score?
+                          %sup.text-danger= "-#{result.penalty_size}%"
                     - else
                       = result.formated_points
                 - elsif can_update
