--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,4 +1,4 @@
-.navbar.navbar-default.navbar-fixed-top{role: 'navigation'}
+.header.navbar.navbar-default.navbar-fixed-top{role: 'navigation'}
   .container
     .navbar-header
       %button.navbar-toggle.collapsed{type: 'button', data: {toggle: 'collapse', target: '#skyderby-navbar-collapse'}}
