fix selector for update scorebord

--- a/app/views/events/update_scoreboard.js.erb
+++ b/app/views/events/update_scoreboard.js.erb
@@ -1,2 +1,2 @@
 $('#modal').modal('hide');
-$('#results-table').replaceWith("<%= j render @scoreboard %>");
+$('.event__scoreboard').replaceWith("<%= j render @scoreboard %>");
