refactor result scoped views

--- a/app/views/events/results/maps/show.js.erb
+++ b/app/views/events/results/maps/show.js.erb
@@ -1,2 +1,2 @@
-$('#modal').html('<%= j render('modal') %>');
+$('#modal').html('<%= j render partial: 'map', layout: 'events/results/layout_modal', locals: { wrap_in_container: true, show_cancel: true } %>');
 $('#modal').modal('show');
