--- a/app/views/events/results/jump_ranges/show.js.erb
+++ b/app/views/events/results/jump_ranges/show.js.erb
@@ -1,2 +1,2 @@
-$('#modal').html('<%= j render('modal') %>');
+$('#modal').html('<%= j render partial: 'jump_range_form', layout: 'events/results/layout_modal', locals: { show_cancel: true } %>');
 $('#modal').modal('show');
