--- a/app/views/layouts/_header.html+mobile.haml
+++ b/app/views/layouts/_header.html+mobile.haml
@@ -53,3 +53,4 @@
         - if !user_signed_in?
           %li.main-menu__item.main-menu--login
             = link_to t('application.header.sign_in'), new_user_session_path
+  .header__spacer
