--- a/app/assets/stylesheets/mobile/_header.scss
+++ b/app/assets/stylesheets/mobile/_header.scss
@@ -10,6 +10,11 @@
   transition-delay: 0;
 }
 
+.header__spacer {
+  width: 100%;
+  height: 70px;
+}
+
 .header__bar {
   height: 70px;
   display: flex;
@@ -41,6 +46,11 @@
     color: #fff;
     font: 38px $application-icon-font;
     margin: 0 15px 0 0;
+  }
+
+  &:hover {
+    color: #fff;
+    text-decoration: none;
   }
 }
 
