add place photos

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,6 +32,7 @@
 @import './events/**/*';
 @import './suits/**/*';
 @import './tracks/**/*';
+@import './places/**/*';
 @import './profiles/**/*';
 @import './tournaments/**/*';
 @import './online_competitions/**/*';
