--- a/app/assets/stylesheets/mobile/application.scss
+++ b/app/assets/stylesheets/mobile/application.scss
@@ -17,6 +17,7 @@
 @import '../common/**/*';
 @import '../blocks/**/*';
 @import '../events/**/*';
+@import '../places/**/*';
 
 @import 'variables';
 @import '**/*';
