--- a/app/views/places/finish_lines/index.html.haml
+++ b/app/views/places/finish_lines/index.html.haml
@@ -1,15 +1,1 @@
-.container
-  = render 'places/header'
-
-  .content-block
-    .row
-      .col-sm-12
-        = link_to new_place_finish_line_path(@place), class: 'btn btn-default' do
-          %i.fa.fa-plus
-          Add
-    .table
-      .thead
-        .tr
-          .th Name
-      .tbody
-        = render collection: @finish_lines, partial: 'places/finish_lines/finish_line'
+= render partial: 'finish_lines_index', layout: 'places/layout'
