place#show design improvements

--- a/app/assets/stylesheets/places/_place_photo.scss
+++ b/app/assets/stylesheets/places/_place_photo.scss
@@ -1,5 +1,7 @@
 .place__photo {
   height: 30vh;
+  min-height: 190px;
+  max-height: 300px;
   width: 100%;
   background-size: cover;
   background-position: center center;
