--- a/app/views/places/_header.html.haml
+++ b/app/views/places/_header.html.haml
@@ -1,24 +1,20 @@
 .row
   .col-sm-12
-    .place-map-wrapper
+    .place-header
       - if @place.photos.any?
         .place__photo{style: "background-image: url(#{@place.photos.first.image.url(:large)})"}
       - else
         .place-map
           %img{src: "https://maps.googleapis.com/maps/api/staticmap?center=#{@place.latitude},#{@place.longitude}&zoom=12&size=600x150&scale=2&maptype=hybrid"}
-      .place-map-description
-        .place-map-background
-          %h1
-            = @place.name
-            %small
-              - if policy(@place).edit?
-                |
-                %a{href: edit_place_path(@place)}
-                  %i.fa.fa-pencil
-                %a{href: place_path(@place), data: {method: 'delete', confirm: t('places.show.delete_confirmation')}}
-                  %i.fa.fa-times-circle
-                |
-          %h4= "Lat: #{@place.latitude}, Lon: #{@place.longitude}, MSL: #{@place.msl}"
+      .place-header__description
+        .place-header__title= @place.name
+        .place-header__geo= "Lat: #{@place.latitude}, Lon: #{@place.longitude}, MSL: #{@place.msl}"
+        - if policy(@place).edit?
+          .place-header__actions
+            %a.btn-flat{href: edit_place_path(@place)}
+              = t('general.edit')
+            %a.btn-flat{href: place_path(@place), data: {method: 'delete', confirm: t('places.show.delete_confirmation')}}
+              = t('general.delete')
 
 .place-navigation.top-buffer
   .tabs-navbar
