--- a/app/views/places/photos/create.js.erb
+++ b/app/views/places/photos/create.js.erb
@@ -1,4 +1,4 @@
-document.querySelector('.place-photos').insertAdjacentHTML(
+document.querySelector('.place-photos__list').insertAdjacentHTML(
   'beforeend',
   '<%= j render partial: 'places/photos/photo', locals: { photo: @photo } %>'
 )
