minor improvements to places

--- a/app/assets/stylesheets/fonts/_app_icons.scss
+++ b/app/assets/stylesheets/fonts/_app_icons.scss
@@ -13,4 +13,5 @@ $icon-notification: '\e90b';
 $icon-logout:       '\e922';
 $icon-remove:       '\e911';
 $icon-track:        '\e907';
+$icon-location:     '\e908';
 $icon-wingsuit:     '\e909';
