--- a/app/assets/stylesheets/mobile/_main_menu.scss
+++ b/app/assets/stylesheets/mobile/_main_menu.scss
@@ -145,3 +145,8 @@
   content: $icon-cup;
   font: 31px/27px $application-icon-font;
 }
+
+.main-menu__icon--location:before {
+  content: $icon-location;
+  font: 31px/27px $application-icon-font;
+}
