--- a/app/views/layouts/_header.html+mobile.haml
+++ b/app/views/layouts/_header.html+mobile.haml
@@ -51,7 +51,7 @@
             = t('application.header.online_competitions')
         %li.main-menu__item{class: ('active' if root_controller == 'places')}
           = link_to places_path do
-            %span.main-menu__icon.main-menu__icon--cup
+            %span.main-menu__icon.main-menu__icon--location
             = t('application.header.places')
 
         - if !user_signed_in?
